# LightRAG

./: .dockerignore  .env.jya0.example  .env.testing  .gitignore  Dockerfile  Makefile  clip.txt  docker-compose.yml  pyproject.toml
.agent/rules/: code-structre-rules.md  must-follow.md
docs_api/: lightrag-api-docs.html
libs/lightrag-auto-er/: debug_splink_syntax.py
libs/lightrag_auto_er/: debug_condition_b.py  main.py  pyproject.toml
libs/lightrag_auto_er/src/lightrag_auto_er/: config.py  data_loader.py  embeddings.py  features.py  llm_resolution.py  logger.py  pipeline.py  splink_model.py
libs/lightrag_auto_er/tests/: debug_acronyms.py  test_llm_latency.py  test_payload.py
lightrag/: base.py  lightrag.py  operate.py  prompt.py  rerank.py  utils.py
lightrag/api/: README.md  config.py  lightrag_server.py
lightrag/evaluation/: eval_rag_quality.py
lightrag/kg/: neo4j_impl.py  networkx_impl.py  qdrant_impl.py
lightrag/llm/: openai.py
lightrag_webui/: package-lock.json
multiuser/: .env.prd  manager.py
multiuser/app/: main.py
service-er-lightrag/: main.py
service-er-lightrag/src/: config.py  embeddings.py  llm_resolution.py  merging.py
service-er-lightrag/tests/: test_llm_latency.py
tests/: inspect_neo4j_full_data.py  test_api_structure.py  test_concurrent_upload.py  test_neo4j_entity_export.py  test_redis_entity_export.py
tests/sample_docs/: doc_01_ai_overview.txt  doc_02_climate_change.txt  doc_03_renaissance.txt  doc_04_quantum_computing.txt  doc_05_space_exploration.txt  doc_06_blockchain.txt  doc_07_mental_health.txt  (+3 more)
(+41 files in other folders)
